<resources>
	<string name="comprimento_horario_diario_default">08:00</string>
	<string name="comprimento_horario_diario_label">Comprimento de horário diário</string>
	<string name="comprimento_horario_diario_key">comprimento_horario</string>

	<string name="tolerancia_saida_default">00:10</string>
	<string name="tolerancia_saida_label">Posso sair faltando até</string>
	<string name="tolerancia_saida_key">tolerancia_saida</string>

	<string name="excesso_hora_extra_default">00:00</string>
	<string name="excesso_hora_extra_label">Não hora extra para até</string>
	<string name="excesso_hora_extra_key">excesso_hora_extra</string>

	<string name="url_importacao_default">https://raw.githubusercontent.com/florenciofvf/AppPeriodo/master/app/src/main/res/raw/temp.txt</string>
	<string name="url_importacao_label">URL de importação</string>
	<string name="url_importacao_key">url_importacao</string>

	<string name="vibrar_default">100,500,200,500,300,500,400,500,500,500</string>
	<string name="vibrar_label">Vibrar</string>
	<string name="vibrar_key">vibrar</string>

	<string name="MANHA_INI_default">00:00</string>
	<string name="MANHA_INI_label">Manhã INI</string>
	<string name="MANHA_INI_key">manha_ini</string>

	<string name="MANHA_FIM_default">00:00</string>
	<string name="MANHA_FIM_label">Manhã FIM</string>
	<string name="MANHA_FIM_key">manha_fim</string>

	<string name="TARDE_INI_default">00:00</string>
	<string name="TARDE_INI_label">Tarde INI</string>
	<string name="TARDE_INI_key">tarde_ini</string>

	<string name="TARDE_FIM_default">00:00</string>
	<string name="TARDE_FIM_label">Tarde FIM</string>
	<string name="TARDE_FIM_key">tarde_fim</string>

	<string name="NOITE_INI_default">00:00</string>
	<string name="NOITE_INI_label">Noite INI</string>
	<string name="NOITE_INI_key">noite_ini</string>

	<string name="NOITE_FIM_default">00:00</string>
	<string name="NOITE_FIM_label">Noite FIM</string>
	<string name="NOITE_FIM_key">noite_fim</string>

	<string name="label_click_para_atualizar">Click para atualizar</string>
	<string name="label_registro_excluido">Registro excluído.</string>
	<string name="label_registro_salvo">Registro salvo.</string>
	<string name="label_exportar_dados">Exportar dados</string>
	<string name="label_configuracoes">Configurações</string>
	<string name="label_preferencias">Preferências</string>
	<string name="label_sincronizado">Sincronizado</string>
	<string name="label_bater_ponto">Bater Ponto</string>
	<string name="label_observacao">Observação:</string>
	<string name="label_relatorios">Relatórios</string>
	<string name="label_me_lembre">Me Lembre</string>
	<string name="label_agendado">Agendado</string>
	<string name="label_cancelar">Cancelar</string>
	<string name="label_especial">Especial</string>
	<string name="label_desfazer">Desfazer</string>
	<string name="label_exportar">Exportar</string>
	<string name="label_importar">Importar</string>
	<string name="label_excluir">Excluir</string>
	<string name="label_entrada">Entrada</string>
	<string name="label_periodo">Período</string>
	<string name="label_total_lei">VAL:</string>
	<string name="label_salvar">Salvar</string>
	<string name="label_valido">Válido</string>
	<string name="label_pontos">Pontos</string>
	<string name="label_credito">CRE:</string>
	<string name="label_debito">DEB:</string>
	<string name="app_name">Períodos</string>
	<string name="label_saida">Saída</string>
	<string name="label_total">TOT:</string>
	<string name="label_anos">Anos</string>
	<string name="label_hoje">Hoje</string>
	<string name="label_obs">OBS:</string>
	<string name="label_dia">DAT:</string>
</resources>