<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/txtTitulo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/cinco_dp"
			android:layout_marginTop="@dimen/um_dp"
			android:background="@drawable/bg_atual"
			android:elevation="@dimen/cinco_dp"
			android:gravity="center"
			android:textAppearance="?android:textAppearanceLarge" />

		<ProgressBar
			android:id="@+id/progressBar"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/zero_dp"
			android:max="100"
			android:progress="56" />

		<LinearLayout
			android:layout_marginTop="@dimen/um_dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/oito_dp"
			android:elevation="@dimen/cinco_dp"
			android:gravity="center"
			android:orientation="horizontal">

			<TextView
				android:layout_marginLeft="@dimen/vinte_dp"
				android:layout_marginRight="@dimen/vinte_dp"
				android:padding="@dimen/dez_dp"
				android:background="@drawable/bg_cancelar"
				android:text="Cancelar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:elevation="@dimen/doze_dp" />

			<TextView
				android:layout_marginLeft="@dimen/vinte_dp"
				android:layout_marginRight="@dimen/vinte_dp"
				android:padding="@dimen/dez_dp"
				android:background="@drawable/bg_progresso"
				android:text="03:17"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:elevation="@dimen/doze_dp" />

			<TextView
				android:layout_marginLeft="@dimen/vinte_dp"
				android:layout_marginRight="@dimen/vinte_dp"
				android:padding="@dimen/dez_dp"
				android:background="@drawable/bg_agendamento"
				android:text="Teste"
				android:id="@+id/txtAgendamento"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:elevation="@dimen/doze_dp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/dez_dp"
			android:background="@drawable/bg_padrao"
			android:elevation="@dimen/cinco_dp"
			android:gravity="center"
			android:orientation="horizontal">

			<CheckBox
				android:id="@+id/chkValido"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_valido" />

			<CheckBox
				android:id="@+id/chkEspecial"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_especial" />

			<CheckBox
				android:id="@+id/chkSincronizado"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_sincronizado" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/dez_dp"
			android:background="@drawable/bg_padrao"
			android:elevation="@dimen/cinco_dp"
			android:gravity="center"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_entrada" />

			<TextView
				android:id="@+id/btnManhaIni"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/quinze_dp"
				android:elevation="@dimen/doze_dp"
				android:padding="@dimen/vinte_dp" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_saida" />

			<TextView
				android:id="@+id/btnManhaFim"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/quinze_dp"
				android:elevation="@dimen/doze_dp"
				android:padding="@dimen/vinte_dp" />

			<TextView
				android:id="@+id/txtManhaCal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/dez_dp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/dez_dp"
			android:background="@drawable/bg_padrao"
			android:elevation="@dimen/cinco_dp"
			android:gravity="center"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_entrada" />

			<TextView
				android:id="@+id/btnTardeIni"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/quinze_dp"
				android:elevation="@dimen/doze_dp"
				android:padding="@dimen/vinte_dp" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_saida" />

			<TextView
				android:id="@+id/btnTardeFim"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/quinze_dp"
				android:elevation="@dimen/doze_dp"
				android:padding="@dimen/vinte_dp" />

			<TextView
				android:id="@+id/txtTardeCal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/dez_dp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/dez_dp"
			android:background="@drawable/bg_padrao"
			android:elevation="@dimen/cinco_dp"
			android:gravity="center"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_entrada" />

			<TextView
				android:id="@+id/btnNoiteIni"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/quinze_dp"
				android:elevation="@dimen/doze_dp"
				android:padding="@dimen/vinte_dp" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_saida" />

			<TextView
				android:id="@+id/btnNoiteFim"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/quinze_dp"
				android:elevation="@dimen/doze_dp"
				android:padding="@dimen/vinte_dp" />

			<TextView
				android:id="@+id/txtNoiteCal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/dez_dp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/dez_dp"
			android:background="@drawable/bg_padrao"
			android:elevation="@dimen/cinco_dp"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/label_dia" />

				<TextView
					android:id="@+id/txtDia"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/tres_dp" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/label_total" />

				<TextView
					android:id="@+id/txtTotal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/tres_dp" />

				<TextView
					android:layout_marginLeft="@dimen/quinze_dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/label_total_lei" />

				<TextView
					android:id="@+id/txtTotalLei"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/tres_dp" />

				<TextView
					android:layout_marginLeft="@dimen/quinze_dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/label_debito" />

				<TextView
					android:id="@+id/txtDebito"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/tres_dp" />

				<TextView
					android:layout_marginLeft="@dimen/quinze_dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/label_credito" />

				<TextView
					android:id="@+id/txtCredito"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/tres_dp" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/label_obs" />

				<TextView
					android:id="@+id/txtObs"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/tres_dp" />
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/cinco_dp"
			android:background="@drawable/bg_padrao"
			android:elevation="@dimen/cinco_dp"
			android:gravity="center"
			android:orientation="horizontal">

			<Button
				android:id="@+id/btnDesfazer"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_desfazer" />

			<Button
				android:id="@+id/btnSalvar"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_salvar" />

			<Button
				android:id="@+id/btnLembrete"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_me_lembre" />
		</LinearLayout>

	</LinearLayout>

</ScrollView>
