<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    android:orientation="vertical"
    android:paddingLeft="@dimen/vinte_dp">

    <LinearLayout
        android:id="@+id/lltManha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/cinco_dp"
        android:paddingTop="@dimen/cinco_dp">

        <TextView
            android:id="@+id/txtManhaIni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/cinco_dp"
            android:background="@drawable/bg_preto_hora"
            android:elevation="@dimen/vinte_dp"
            android:paddingLeft="@dimen/sete_dp"
            android:paddingRight="@dimen/sete_dp"
            android:textColor="@color/branco" />

        <TextView
            android:id="@+id/txtManhaFim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/cinco_dp"
            android:background="@drawable/bg_preto_hora"
            android:elevation="@dimen/vinte_dp"
            android:paddingLeft="@dimen/sete_dp"
            android:paddingRight="@dimen/sete_dp"
            android:textColor="@color/branco" />

        <TextView
            android:id="@+id/txtManhaCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltTarde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/cinco_dp"
        android:paddingTop="@dimen/cinco_dp">

        <TextView
            android:id="@+id/txtTardeIni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/cinco_dp"
            android:background="@drawable/bg_preto_hora"
            android:elevation="@dimen/vinte_dp"
            android:paddingLeft="@dimen/sete_dp"
            android:paddingRight="@dimen/sete_dp"
            android:textColor="@color/branco" />

        <TextView
            android:id="@+id/txtTardeFim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/cinco_dp"
            android:background="@drawable/bg_preto_hora"
            android:elevation="@dimen/vinte_dp"
            android:paddingLeft="@dimen/sete_dp"
            android:paddingRight="@dimen/sete_dp"
            android:textColor="@color/branco" />

        <TextView
            android:id="@+id/txtTardeCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltNoite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/cinco_dp"
        android:paddingTop="@dimen/cinco_dp">

        <TextView
            android:id="@+id/txtNoiteIni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/cinco_dp"
            android:background="@drawable/bg_preto_hora"
            android:elevation="@dimen/vinte_dp"
            android:paddingLeft="@dimen/sete_dp"
            android:paddingRight="@dimen/sete_dp"
            android:textColor="@color/branco" />

        <TextView
            android:id="@+id/txtNoiteFim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/cinco_dp"
            android:background="@drawable/bg_preto_hora"
            android:elevation="@dimen/vinte_dp"
            android:paddingLeft="@dimen/sete_dp"
            android:paddingRight="@dimen/sete_dp"
            android:textColor="@color/branco" />

        <TextView
            android:id="@+id/txtNoiteCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/cinco_dp"
        android:paddingTop="@dimen/cinco_dp">

        <TextView
            android:id="@+id/lblTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_total" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltTotalLei"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/cinco_dp"
        android:paddingTop="@dimen/cinco_dp">

        <TextView
            android:id="@+id/lblTotalLei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_total_lei" />

        <TextView
            android:id="@+id/txtTotalLei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltDebito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/cinco_dp"
        android:paddingTop="@dimen/cinco_dp">

        <TextView
            android:id="@+id/lblDebito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_debito" />

        <TextView
            android:id="@+id/txtDebito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltCredito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/cinco_dp"
        android:paddingTop="@dimen/cinco_dp">

        <TextView
            android:id="@+id/lblCredito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_credito" />

        <TextView
            android:id="@+id/txtCredito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltObs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/cinco_dp"
        android:paddingTop="@dimen/cinco_dp">

        <TextView
            android:id="@+id/lblObs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_observacao" />

        <TextView
            android:id="@+id/txtObs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dez_dp"
        android:paddingTop="@dimen/dez_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_click_para_atualizar" />

    </LinearLayout>

</LinearLayout>